--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ Derived/
 ### Tuist managed dependencies ###
 Tuist/.build
 ConfigsLive/Sources/ConfigsLive.swift
+Tuist/ProjectDescriptionHelpers/Settings.secret.swift
